# subliminal-learning

./: .gitignore  README.md  attention.py  divergence_tokens.py  eval_plot.py  generate_data.sh  lora_interp.py  patching.py  pyproject.toml  run.sh  run_all_ft_jobs.sh  setup.sh  tuned_lens.py
.claude/: settings.local.json
cfgs/preference_numbers/: open_model_cfgs.py
sl/finetuning/: services.py
sl/utils/: file_utils.py  llm_utils.py
