[project]
name = "sl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.3.0",
    "dotenv>=0.9.9",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jaxtyping>=0.3.3",
    "kaleido>=1.2.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "neovim>=0.3.1",
    "numpy<2.3.1",
    "openai>1.87.0,<=1.90.0",
    "pandas>=2.3.1",
    "peft>=0.18.0",
    "pip>=25.1.1",
    "plotly>=6.5.0",
    "pydantic>=2.11.7",
    "scipy>=1.16.0",
    "tokenizers==0.21.1",
    "torch>=2.9.1",
    "torchvision>=0.22.1",
    "transformers>=4.55.4",
    "wandb>=0.23.1",
]

[tool.setuptools]
packages = ["sl", "sl.external", "sl.llm", "sl.core", "sl.utils", "sl.evaluation"]
package-dir = {"sl" = "sl"}

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ipython>=9.4.0",
    "neovim>=0.3.1",
    "pre-commit>=4.2.0",
    "pyright>=1.1.403",
    "pytest-asyncio>=1.1.0",
    "pytest>=8.4.1",
    "ruff>=0.12.4",
    "ipdb>=0.13.13",
]
open_models = [
    "skypilot[runpod]>=0.10.0",
    # "vllm==0.10.0",
    "unsloth>=2025.7.8",
    "unsloth-zoo>=2025.7.10",
]
